stages/stage4/k8s/apps/notification/notification-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
  namespace: apollo11-apps
spec:
  selector:
    app: notification
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
